--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,61 @@
-/* You can add global styles to this file, and also import other style files */
+/* Custom propierties */
+:root {
+    --black-color: rgb(0,0,0);
+    --white-color: #ffffff;
+    --white-alpha-color: #ffffff80;
+    --nav-bg: rgba(0, 0, 0, 0.459);
+    --blur-bg: blur(5px);
+    --font: "Raleway", sans-serif;
+    --max-width: 1200px;
+    --header-height: 4rem;
+    --box-shadow-white: 0 0 1rem var(--white-color);
+}
+  
+/* Reset */
+html {
+    box-sizing: border-box;
+    font-family: var(--font);
+    font-size: 16px;
+    scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    color: var(--text-color);
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+a {
+    color: var(--link-color);
+    transition: all 0.5s ease-out;
+    text-decoration: none;
+}
+
+a:hover {
+    opacity: 0.75;
+}
+
+h1 {
+margin: 0;
+font-size: 2rem;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
